--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,12 @@ footer div.footermain_container{
     grid-template-columns: 20% 20% 20% 20% auto;
     column-gap: 10px;
 }
+.footersub_container2 ul>li>a{
+    color: #3B2156;
+}
+.footersub_container3 ul>li>a{
+    color: #3B2156;
+}
 ul.footer_undorderedlist {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     list-style: none;
